--- a/BarbieHistory.html
+++ b/BarbieHistory.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="ru">
+<html lang="ru">
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>История Барби</title>
   <link rel="stylesheet" href="css/BarbieHistory.css" media="screen">
-
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Merriweather:300,300i,400,400i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i|Lobster:400">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400%7CMerriweather%7COpen+Sans:600%7CLobster:400">
 </head>
 
 <body>
   <header id="head">
     <div>
-      <img src="images/Logo.svg" class="logo">
+      <img src="images/LogoV2.svg" class="logo" alt="">
       <nav>
         <ul>
           <input type="checkbox" id="burger">
           <li class="menu"><label for="burger"></label></li>
           <li><a href="BarbieHistory.html" style="color: rgb(224, 33, 143)">История Барби</a></li>
           <li><a href="Movies.html">Список мультфильмов</a></li>
+          <li><a href="Barbie&World.html">Барби и мир</a></li>
         </ul>
       </nav>
     </div>
@@ -59,7 +58,7 @@
       <h3>Кукла Лилли (Bild Lilli). Предшественница Барби</h3>
       <p>В июне 1952 года немецкому карикатуристуРайнхарду
         Бойтину(Reinhardt
-        Beuthin) поступил заказ на несколько мини-комиксов:«новорожденной» газетеBild Zeitungбыло
+        Beuthin) поступил заказ на несколько мини-комиксов: «новорожденной» газете Bild Zeitung было
         нужно чем-то заполнить пустующую колонку своего первого номера. И Райнхард нарисовалпрелестную
         фигуристую
         блондинку лет двадцати, сексапильную и уверенную в себе, легко манипулирующую мужчинами и в то же
@@ -70,8 +69,8 @@
       </p>
       <div class="grid-2">
         <div class="figure-2">
-          <img src="images/image.png">
-          <figcaption> Комиксы с участием Билд Лилли</figcaption>
+          <img src="images/image.png" alt="">
+          <p> Комиксы с участием Билд Лилли</p>
         </div>
         <div>
           <p> Успех,&nbsp;сопровождавший Лилли, не мог не привести к мысли о новых
@@ -92,8 +91,8 @@
       <h4>Технология</h4>
       <div class="grid-3">
         <div class="figure-3" style="order: 2;">
-          <img src="images/lilli-cond-1.jpg">
-          <figcaption>Стандартная Bild Lilli ростом 29,5 см.</figcaption>
+          <img src="images/lilli-cond-1.jpg" alt="">
+          <p>Стандартная Bild Lilli ростом 29,5 см.</p>
         </div>
         <div style="order: 1;">
           <p> В ходе создания Bild Lilli
@@ -128,8 +127,8 @@
       <h3> Лилли и Б​арби</h3>
       <div class="grid-4">
         <div class="figure-4" style="order: 2;">
-          <img src="images/lilli-first-barbie.jpg">
-          <figcaption>Первая кукла Барби</figcaption>
+          <img src="images/lilli-first-barbie.jpg" alt="">
+          <p>Первая кукла Барби</p>
         </div>
         <div style="order: 1;">
           <p> Рут Хэндлер привезла куклу
@@ -160,7 +159,8 @@
       </div>
     </section>
 
-    <section class="section-5">
+    
+    <div class="section-5">
       <div class="grid-5">
         <div class="image-1"></div>
         <div class="image-2"></div>
@@ -169,7 +169,7 @@
         <div class="image-5"></div>
         <div class="image-6"></div>
       </div>
-    </section>
+    </div>
   </main>
 
   <footer>
